--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
+    "mammoth": "^1.11.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
