Checkpoint: Updated all project documentation to reflect the evolved "Branch Application Catalogue" purpose. Changed README.md, QUICKSTART.md, and SETUP_INSTRUCTIONS.md from single-app (Loan Recovery Notice Generator) to multi-app platform documentation. Updated package.json name from "loan-recovery-notices" to "branch-app-catalogue". Updated index.html title to generic "Branch Application Catalogue - SBI". Documentation now accurately describes all six integrated applications and unified platform features.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loan-recovery-notices",
+  "name": "branch-app-catalogue",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
