--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "embla-carousel-react": "^8.6.0",
     "express": "^4.21.2",
     "framer-motion": "^12.23.22",
+    "html2canvas": "^1.4.1",
     "idb": "^8.0.3",
     "input-otp": "^1.4.2",
+    "jspdf": "^4.0.0",
     "lucide-react": "^0.453.0",
     "mammoth": "^1.11.0",
     "nanoid": "^5.1.5",
